# cli-project-manager

./: .gitignore  Cargo.toml
src/: app.rs  cli.rs  config.rs  lib.rs  main.rs  project.rs
